# nextage

./: README.md
catchup/: CMakeLists.txt
catchup/ceres/: CMakeLists.txt
catchup/ceres/2d-2dCorrespondence/: CMakeLists.txt  main.cpp
catchup/ceres/BundleAdjustment/: CMakeLists.txt  factor.cpp  factor.h  main.cpp
catchup/ceres/BundleQuaternion/: CMakeLists.txt  main.cpp
catchup/ceres/BundleQuaternion/factor/: pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  utility.h
catchup/ceres/CubicFunction/: CMakeLists.txt  main.cpp
catchup/ceres/LinearFunction/: CMakeLists.txt  main.cpp
catchup/ceres/PowellFunction/: CMakeLists.txt  main.cpp
catchup/ceres/QuadraticFunction/: CMakeLists.txt  main.cpp
catchup/ceres/VisualInertial/: CMakeLists.txt  eurocLoader.h  main.cpp
catchup/ceres/VisualInertial/EuRoC_data/MH_01_easy/mav0/: points.ply
catchup/ceres/matplotlib-cpp/: matplotlibcpp.h
catchup/cmake/: FindDBoW3.cmake  FindFBoW.cmake  FindG2O.cmake  FindGTSAM.cmake  FindNanoGUI.cmake  FindYAML_CPP.cmake  FindZeroMQ.cmake
catchup/cv/: CMakeLists.txt
catchup/cv/LK/: CMakeLists.txt  main.cpp
catchup/cv/ShiTomasi/: CMakeLists.txt  main.cpp
catchup/cv/VizPly/: CMakeLists.txt  main.cpp
catchup/dbow3/: CMakeLists.txt
catchup/dbow3/ImageMatching/: CMakeLists.txt  ioEuRoC.cpp  ioEuRoC.h  main.cpp
catchup/fbow/: CMakeLists.txt
catchup/fbow/ImageMatching/: CMakeLists.txt  main.cpp
catchup/g2o/: CMakeLists.txt
catchup/g2o/BundleAdjustment/: CMakeLists.txt  main.cpp
catchup/g2o/CubicFunction/: CMakeLists.txt  main.cpp
catchup/g2o/LinearFunction/: CMakeLists.txt  main.cpp
catchup/g2o/PoseGraph/: CMakeLists.txt  main.cpp
catchup/g2o/PowellFunction/: CMakeLists.txt  main.cpp
catchup/g2o/QuadraticFunction/: CMakeLists.txt  main.cpp
catchup/gtsam/: CMakeLists.txt
catchup/gtsam/ImuFactorEuRoC/: CMakeLists.txt  imuPreintegration.cpp  imuPreintegration.h  ioEuRoC.cpp  ioEuRoC.h  main.cpp  vis.cpp  vis.h
catchup/gtsam/ImuFactorExample/: CMakeLists.txt  main.cpp
catchup/gtsam/ImuFactorExample2/: CMakeLists.txt  main.cpp
catchup/nano/: CMakeLists.txt
catchup/nano/GUI1/: CMakeLists.txt  main.cpp
catchup/ply/: CMakeLists.txt
catchup/ply/PLY_GENERATOR/: CMakeLists.txt  PlyGenerator.cpp  PlyGenerator.h  main.cpp
catchup/simd/: CMakeLists.txt
catchup/simd/EasySample/: CMakeLists.txt  main.cpp
catchup/std/: CMakeLists.txt
catchup/std/cache/: CMakeLists.txt  main.cpp
catchup/svo/: CMakeLists.txt
catchup/svo/feature_alignment/: CMakeLists.txt  main.cpp
catchup/zeromq/: CMakeLists.txt
catchup/zeromq/socket_1_client/: CMakeLists.txt  main.cpp
catchup/zeromq/socket_1_server/: CMakeLists.txt  main.cpp
catchup/zeromq/socket_2_client/: CMakeLists.txt  main.cpp
catchup/zeromq/socket_2_client_pose/: CMakeLists.txt  main.cpp
catchup/zeromq/socket_2_server/: CMakeLists.txt  main.cpp
